# AI-Job-Applier

./: .env.example  .geminiignore  .gitignore  README.md  memory.json  notes.text  package-lock.json  package.json  pyproject.toml  run  usage.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
src/: activity.py  config.py  database.py  main.py  models.py  orchestrator.py  stealth.py  usage.py
src/agents/: analyzer.py  cover_letter.py  executor.py  sourcer.py
src/api/: main.py
src/config/: __init__.py  profile.yaml
src/memory/: __init__.py  memory_store.py  self_refine.py
src/templates/: cover_letter_template.md
tests/: __init__.py  test_pipeline.py  test_stealth.py
